Add visual overview documentation and environment configuration example
- Created VISUAL_OVERVIEW.md to provide a comprehensive visual guide for the DriveHub authentication system, including architecture diagrams, authentication flows, component interactions, security layers, database schema, and API endpoints overview.
- Added frontend environment configuration example (.env.example) for API URL and environment name.